--- a/MyCalendar.MVC/Views/Home/Index.cshtml
+++ b/MyCalendar.MVC/Views/Home/Index.cshtml
@@ -2,7 +2,6 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
 <div id="calender"></div>
 
 <div id="myModal" class="modal fade" role="dialog">
@@ -30,7 +29,7 @@
 
 <div id="myModalSave" class="modal fade" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content"  style="padding: 15px;">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Save Event</h4>
@@ -45,12 +44,12 @@
                     <div class="form-group">
                         <label>Start</label>
                         <div class="input-group date" id="dtp1">
-                            <input type="text" id="txtStart" class="form-control" />
                             <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
                             </span>
+                            <input type="text" id="txtStart" class="form-control" />
                         </div>
-                    </div>
+                     </div>
                     <div class="form-group">
                         <div class="checkbox">
                             <label><input type="checkbox" id="chkIsFullDay" checked="checked" />  Is Full Day event</label>
@@ -59,10 +58,10 @@
                     <div class="form-group" id="divEndDate" style="display:none">
                         <label>End</label>
                         <div class="input-group date" id="dtp2">
-                            <input type="text" id="txtEnd" class="form-control" />
                             <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
                             </span>
+                            <input type="text" id="txtEnd" class="form-control" />
                         </div>
                     </div>
                     <div class="form-group">
