--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model MyCalendar.Website.ViewModels.BaseVM
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -13,7 +14,7 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span> 
+                    <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
@@ -23,7 +24,7 @@
                 <ul class="nav navbar-nav pull-right">
                     <li>
                         <a href="@Url.Action("Index", "Home")">
-                            <span class="glyphicon glyphicon-user"></span> Settings
+                            <span class="glyphicon glyphicon-user"></span> @(Model != null && Model.Authenticated ? Model.Name : "Login")
                         </a>
                     </li>
                 </ul>
