Create base view model for shared layout, make user authentication and load events per user workable

--- a/MyCalendar.MVC/Views/Home/Calendar.cshtml
+++ b/MyCalendar.MVC/Views/Home/Calendar.cshtml
@@ -103,7 +103,8 @@
                 events = [];
                 $.ajax({
                     type: "GET",
-                    url: "/home/GetEvents",
+                    data: { 'viewingId': '@Model.Viewing', 'combined': '@Model.Combined'  },
+                    url: "/home/GetEvents/",
                     success: function (data) {
                         $.each(data, function (i, v) {
                             events.push({
