--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -22,11 +22,35 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav pull-right">
-                    <li>
-                        <a href="@Url.Action("Index", "Home")">
-                            <span class="glyphicon glyphicon-user"></span> @(Model != null && Model.User.Authenticated ? Model.User.Name : "Login")
-                        </a>
-                    </li>
+                    @if (Model != null && Model.Users != null && Model.Users.Any())
+                    {
+                        <li>
+                            <a style="@(Model.User.UserID == Model.Viewing || (Model.Viewing == null && Model.Combined == false) ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { viewingId = Model.User.UserID })">
+                                <span class="glyphicon glyphicon-user"></span> @Model.User.Name
+                            </a>
+                        </li>
+                        foreach (var user in Model.Users)
+                        {
+                            <li>
+                                <a style="@(user.UserID == Model.Viewing ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { viewingId = user.UserID })">
+                                    <span class="glyphicon glyphicon-calendar"></span> @user.Name
+                                </a>
+                            </li>
+                        }
+                        <li>
+                            <a style="@(Model.Combined ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { combined = true })">
+                                <span class="glyphicon glyphicon-calendar"></span> Combined
+                            </a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li>
+                            <a href="@Url.Action("Index", "Home")">
+                                <span class="glyphicon glyphicon-user"></span> Login
+                            </a>
+                        </li>
+                    }
                 </ul>
             </div>
         </div>
