--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -22,20 +22,23 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav pull-right">
-                    @if (Model != null && Model.Users != null && Model.Users.Any())
+                    @if (Model != null && Model.User != null)
                     {
                         <li>
-                            <a style="@(Model.User.UserID == Model.Viewing || (Model.Viewing == null && Model.Combined == false) ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { viewingId = Model.User.UserID })">
+                            <a style="@(Model.User.UserID == Model.Viewing || (Model.Viewing == null && Model.Combined == false && Model.Settings == false) ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { viewingId = Model.User.UserID })">
                                 <span class="glyphicon glyphicon-user"></span> @Model.User.Name
                             </a>
                         </li>
-                        foreach (var user in Model.Users)
+                        if (Model.Users != null && Model.Users.Any())
                         {
+                            foreach (var user in Model.Users)
+                            {
                             <li>
-                                <a style="@(user.UserID == Model.Viewing ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { viewingId = user.UserID })">
+                                <a style="@(user.UserID == Model.Viewing ? "color:#0094ff" : "")" href="@Url.Action("Index", "Home", new { viewingId = user.UserID })">
                                     <span class="glyphicon glyphicon-calendar"></span> @user.Name
                                 </a>
                             </li>
+                            }
                         }
                         <li>
                             <a style="@(Model.Combined ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { combined = true })">
@@ -43,7 +46,7 @@
                             </a>
                         </li>
                         <li>
-                            <a style="@(Model.Combined ? "": "")" href="@Url.Action("Index", "Home")">
+                            <a style="@(Model.Settings ? "color:#0094ff": "")" href="@Url.Action("Settings", "Home")">
                                 <span class="glyphicon glyphicon-edit"></span> Settings
                             </a>
                         </li>
