--- a/MyCalendar.MVC/Views/Home/Settings.cshtml
+++ b/MyCalendar.MVC/Views/Home/Settings.cshtml
@@ -26,14 +26,16 @@
                 </div>
             }
         }
-        <div>
+        <div class="jumbotron">
+            <h3><span class="glyphicon glyphicon-user"> Profile</span></h3>
+            <hr />
             <div class="form-group">
                 @Html.LabelFor(x => x.User.Name)
-                @Html.TextBoxFor(s => s.User.Name, new { @class = "form-control", @type = "text", @placeholder = "Name" })
+                @Html.TextBoxFor(s => s.User.Name, new { @class = "form-control", @type = "text", @placeholder = "Name", @required = "required" })
             </div>
             <div class="form-group">
                 @Html.LabelFor(x => x.User.Passcode, "Login Passcode") <font color="red"><small>(changing this will log you out)</small></font>
-                @Html.TextBoxFor(s => s.User.Passcode, new { @class = "form-control", @type = "number", @placeholder = "Passcode" })
+                @Html.TextBoxFor(s => s.User.Passcode, new { @class = "form-control", @type = "number", @placeholder = "Passcode", @required = "required" })
             </div>
             <div class="form-group">
                 @Html.LabelFor(x => x.User.Email)
@@ -47,6 +49,8 @@
             <button type="submit" class="btn btn-primary">Update</button>
         </div>
     }
+
+    @Html.Partial("_Tags", Model.UserTags);
 }
 else
 {
@@ -56,4 +60,19 @@ else
             You are not logged in!
         </div>
     </div>
+}
+
+@section Scripts{
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(".add-more").click(function () {
+                var html = $(".copy").html();
+                $(".after-add-more").after(html);
+            });
+
+            $("body").on("click", ".remove", function () {
+                $(this).parents(".control-group").remove();
+            });
+        });
+    </script>
 }
