--- a/MyCalendar.MVC/Views/Home/Calendar.cshtml
+++ b/MyCalendar.MVC/Views/Home/Calendar.cshtml
@@ -4,7 +4,6 @@
 }
 
 <div id="calender"></div>
-
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -30,12 +29,12 @@
 
 <div id="myModalSave" class="modal fade" role="dialog">
     <div class="modal-dialog">
-        <div class="modal-content"  style="padding: 15px;">
+        <div class="modal-content" style="padding: 15px;">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Save Event</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" style="margin-left: 10px">
                 <form class="form-horizontal">
                     <input type="hidden" id="hdEventID" value="0" />
                     <div class="form-group">
@@ -49,29 +48,22 @@
                     </div>
                     <div class="form-group">
                         <label>Start</label>
-                        <div class="input-group date" id="dtp1">
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                            </span>
-                            <input type="text" id="txtStart" class="form-control" />
-                        </div>
+                        <input type="datetime-local" id="txtStart" class="form-control" />
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="margin-left: -30px">
                         <div class="checkbox checkbox-inline">
-                            <label><input type="checkbox" id="chkIsFullDay" checked="checked" />  Is Full Day event</label>
+                            <label><input type="checkbox" id="chkIsFullDay" checked="checked" />  Full Day</label>
                         </div>
                         <div class="checkbox checkbox-inline">
                             <label><input type="checkbox" id="chkTentative" checked="checked" />  Tentative</label>
                         </div>
+                        <div class="checkbox checkbox-inline">
+                            <label><input type="checkbox" id="" checked="checked" disabled />  Share</label>
+                        </div>
                     </div>
                     <div class="form-group" id="divEndDate" style="display:none">
                         <label>End</label>
-                        <div class="input-group date" id="dtp2">
-                            <span class="input-group-addon">
-                                <span class="glyphicon glyphicon-calendar"></span>
-                            </span>
-                            <input type="text" id="txtEnd" class="form-control" />
-                        </div>
+                        <input type="datetime-local" id="txtEnd" class="form-control" />
                     </div>
                     <div class="form-group">
                         <label>Description</label>
@@ -132,6 +124,7 @@
                     contentHeight: 400,
                     defaultDate: new Date(),
                     timeFormat: 'h(:mm)a',
+                    longPressDelay: 100,
                     header: {
                         left: 'prev,next today',
                         center: 'title',
@@ -144,12 +137,12 @@
                         selectedEvent = calEvent;
                         $('#myModal #eventTitle').text(calEvent.title);
                         var $description = $('<div/>');
-                        $description.append($('<p/>').html('<b>Start:</b>' + calEvent.start.format("DD-MMM-YYYY HH:mm a")));
+                        $description.append($('<p/>').html('<b>Start:</b> ' + calEvent.start.format("DD-MMM-YYYY HH:mm a")));
                         if (calEvent.end != null) {
-                            $description.append($('<p/>').html('<b>End:</b>' + calEvent.end.format("DD-MMM-YYYY HH:mm a")));
+                            $description.append($('<p/>').html('<b>End:</b> ' + calEvent.end.format("DD-MMM-YYYY HH:mm a")));
                         }
                         if (calEvent.description != null) {
-                            $description.append($('<p/>').html('<b>Description:</b>' + calEvent.description));
+                            $description.append($('<p/>').html('<b>Description:</b> ' + calEvent.description));
                         }
                         if (calEvent.tentative) {
                             $description.append($('<p/>').html('<b>Tentative</b>: Yes'));
@@ -179,8 +172,8 @@
                         var data = {
                             EventID: event.eventID,
                             TagID: event.tagID,
-                            Start: event.start.format('DD/MM/YYYY HH:mm A'),
-                            End: event.end != null ? event.end.format('DD/MM/YYYY HH:mm A') : null,
+                            Start: event.start.format('YYYY-MM-DD[T]HH:mm'),
+                            End: event.end != null ? event.end.format('YYYY-MM-DD[T]HH:mm') : null,
                             Description: event.description,
                             IsFullDay: event.allDay,
                             Tentative: event.tentative
@@ -214,7 +207,7 @@
                 }
             })
             $('#dtp1,#dtp2').datetimepicker({
-                format: 'DD/MM/YYYY HH:mm A'
+                format: 'YYYY-MM-DD[T]HH:mm'
             });
             $('#chkIsFullDay').change(function () {
                 if ($(this).is(':checked')) {
@@ -227,12 +220,12 @@
             function openAddEditForm() {
                 if (selectedEvent != null) {
                     $('#hdEventID').val(selectedEvent.eventID);
-                    $('#txtStart').val(selectedEvent.start.format('DD/MM/YYYY HH:mm A'));
+                    $('#txtStart').val(selectedEvent.start.format('YYYY-MM-DD[T]HH:mm'));
                     $('#chkIsFullDay').prop("checked", selectedEvent.allDay || false);
                     $('#chkIsFullDay').change();
                     $('#chkTentative').prop("checked", selectedEvent.tentative || false);
                     $('#chkTentative').change();
-                    $('#txtEnd').val(selectedEvent.end != null ? selectedEvent.end.format('DD/MM/YYYY HH:mm A') : '');
+                    $('#txtEnd').val(selectedEvent.end != null ? selectedEvent.end.format('YYYY-MM-DD[T]HH:mm') : '');
                     $('#txtDescription').val(selectedEvent.description);
                     $('#ddTagID').val(selectedEvent.tagID);
                 }
@@ -250,8 +243,8 @@
                     return;
                 }
                 else {
-                    var startDate = moment($('#txtStart').val(), "DD/MM/YYYY HH:mm A").toDate();
-                    var endDate = moment($('#txtEnd').val(), "DD/MM/YYYY HH:mm A").toDate();
+                    var startDate = moment($('#txtStart').val(), "YYYY-MM-DD[T]HH:mm").toDate();
+                    var endDate = moment($('#txtEnd').val(), "YYYY-MM-DD[T]HH:mm").toDate();
                     if (startDate > endDate) {
                         alert('Invalid end date');
                         return;
