--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -79,7 +79,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - iCalendar App®</p>
+            <p>&copy; @DateTime.Now.Year - iCalendar App® v1.1.2</p>
         </footer>
     </div>
 
