--- a/MyCalendar.MVC/Views/Home/Calendar.cshtml
+++ b/MyCalendar.MVC/Views/Home/Calendar.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Index";
 }
 
+@Html.Partial("_Status", Model)
+
 <div id="calender"></div>
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
@@ -40,6 +42,7 @@
                     <div class="form-group">
                         <label>Tag</label> @Html.ActionLink("(edit tags)", "Settings", "Home")
                         <select id="ddTagID" class="form-control">
+                            <option value="">-- select tag --</option>
                             @foreach (var tag in Model.UserTags.Tags)
                             {
                                 <option value="@tag.Id">@tag.Name</option>
@@ -93,7 +96,7 @@
                 events = [];
                 $.ajax({
                     type: "GET",
-                    data: { 'viewingId': '@Model.Viewing', 'combined': '@Model.Combined'  },
+                    data: { 'viewingId': '@(Model.MenuItem.Viewing.HasValue ? Model.MenuItem.Viewing.Value : (Guid?)null)', 'combined': '@Model.MenuItem.Combined'  },
                     url: "/home/GetEvents/",
                     success: function (data) {
                         $.each(data, function (i, v) {
@@ -284,7 +287,7 @@
                         }
                         else {
                             alert(data.responseText)
-                            window.location.reload(false); 
+                            window.location.reload(false);
                         }
                     },
                     error: function () {
