--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -25,8 +25,8 @@
                     @if (Model != null && Model.User != null)
                     {
                         <li>
-                            <a style="@(Model.User.UserID == Model.Viewing || (Model.Viewing == null && Model.Combined == false && Model.Settings == false) ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { viewingId = Model.User.UserID })">
-                                <span class="glyphicon glyphicon-user"></span> @Model.User.Name
+                            <a style="@((Model.MenuItem.Viewing.HasValue && Model.User.UserID == Model.MenuItem.Viewing.Value) || (Model.MenuItem.Home == true) ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { viewingId = Model.User.UserID })">
+                                <span class="glyphicon glyphicon-home"></span> @Model.User.Name
                             </a>
                         </li>
                         if (Model.Users != null && Model.Users.Any())
@@ -34,25 +34,30 @@
                             foreach (var user in Model.Users)
                             {
                                 <li>
-                                    <a style="@(user.UserID == Model.Viewing ? "color:#0094ff" : "")" href="@Url.Action("Index", "Home", new { viewingId = user.UserID })">
+                                    <a style="@(Model.MenuItem.Viewing.HasValue && user.UserID == Model.MenuItem.Viewing.Value ? "color:#0094ff" : "")" href="@Url.Action("Index", "Home", new { viewingId = user.UserID })">
                                         <span class="glyphicon glyphicon-calendar"></span> @user.Name
                                     </a>
                                 </li>
                             }
                         }
                         <li>
-                            <a style="@(Model.Combined ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { combined = true })">
+                            <a style="@(Model.MenuItem.Combined ? "color:#0094ff": "")" href="@Url.Action("Index", "Home", new { combined = true })">
                                 <span class="glyphicon glyphicon-calendar"></span> Combined
                             </a>
                         </li>
                         <li>
-                            <a style="@(Model.Overview ? "color:#0094ff": "")" href="@Url.Action("Index", "Home")">
+                            <a style="@(Model.MenuItem.Overview ? "color:#0094ff": "")" href="@Url.Action("Index", "Home")">
                                 <span class="glyphicon glyphicon-check"></span> Overview
                             </a>
                         </li>
                         <li>
-                            <a style="@(Model.Settings ? "color:#0094ff": "")" href="@Url.Action("Settings", "Home")">
-                                <span class="glyphicon glyphicon-edit"></span> Settings
+                            <a style="@(Model.MenuItem.MultiAdd ? "color:#0094ff": "")" href="@Url.Action("MultiAdd", "Home")">
+                                <span class="glyphicon glyphicon-edit"></span> Scheduler
+                            </a>
+                        </li>
+                        <li>
+                            <a style="@(Model.MenuItem.Settings ? "color:#0094ff": "")" href="@Url.Action("Settings", "Home")">
+                                <span class="glyphicon glyphicon-user"></span> Profile
                             </a>
                         </li>
                         <li>
@@ -79,7 +84,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - iCalendar App® v1.1.2</p>
+            <p>&copy; @DateTime.Now.Year - iCalendar App® v1.1.3</p>
         </footer>
     </div>
 
