--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - iCalendar App® v1.1.3</p>
+            <small>&copy; @DateTime.Now.Year - iCalendar App® <span class="pull-right">v1.1.3</span></small>
         </footer>
     </div>
 
