--- a/MyCalendar.MVC/Views/Home/Calendar.cshtml
+++ b/MyCalendar.MVC/Views/Home/Calendar.cshtml
@@ -49,6 +49,19 @@
                             }
                         </select>
                     </div>
+                    <div class="form-group" id="divSplitDates" style="display:none">
+                        <label>Split dates into multiple events?</label> 
+                        <select id="splitDates" class="form-control">
+                            <option value="">-- select times --</option>
+                            <option value="05:45-12:00">5:45am-12pm</option>
+                            <option value="08:00-17:00">8am-5pm</option>
+                            <option value="09:00-17:00">9am-5pm</option>
+                            <option value="09:00-18:00">9am-6pm</option>
+                            <option value="12:00-20:00">12pm-8pm</option>
+                            <option value="17:00-22:00">5pm-10pm</option>
+                            <option value="18:00-22:00">6pm-10pm</option>
+                        </select>
+                    </div>
                     <div class="form-group">
                         <label>Start</label>
                         <input type="datetime-local" id="txtStart" class="form-control" />
@@ -166,7 +179,7 @@
                             title: '',
                             description: '',
                             start: start,
-                            end: end,
+                            end: end.subtract(1, "days"),
                             allDay: false,
                             tentative: false,
                             color: ''
@@ -223,11 +236,37 @@
             $('#chkIsFullDay').change(function () {
                 if ($(this).is(':checked')) {
                     $('#divEndDate').hide();
+                    $('#divSplitDates').hide();
                 }
                 else {
                     $('#divEndDate').show();
+                    hideSplitDates(moment($('#txtStart').val()), moment($('#txtEnd').val()))
                 }
             });
+            $('#txtEnd').change(function () {
+                hideSplitDates(moment($('#txtStart').val()), moment($('#txtEnd').val()))
+            });
+            $('#splitDates').change(function () {
+                var result = $('#splitDates').val().split('-');
+                var startDate = moment($('#txtStart').val(), "YYYY-MM-DD[T]HH:mm").format('YYYY-MM-DD[T]' + result[0]);
+                var endDate = moment($('#txtEnd').val(), "YYYY-MM-DD[T]HH:mm").format('YYYY-MM-DD[T]' + result[1]);
+
+                if ($(this).val() != '') { 
+                    $('#txtStart').val(startDate);
+                    $('#txtEnd').val(endDate);
+                }
+            });
+            function hideSplitDates(startDate, endDate) {
+                var diff = endDate.diff(startDate, 'days');
+
+                if (diff > 1) {
+                    $('#divSplitDates').show();
+                }
+                else {
+                    $('#divSplitDates').hide();
+                }
+            }
+
             function openAddEditForm() {
                 if (selectedEvent != null) {
                     $('#hdEventID').val(selectedEvent.eventID);
@@ -239,6 +278,8 @@
                     $('#txtEnd').val(selectedEvent.end != null ? selectedEvent.end.format('YYYY-MM-DD[T]HH:mm') : '');
                     $('#txtDescription').val(selectedEvent.description);
                     $('#ddTagID').val(selectedEvent.tagID);
+
+                    hideSplitDates(moment(selectedEvent.start), moment(selectedEvent.end))
                 }
                 $('#myModal').modal('hide');
                 $('#myModalSave').modal();
@@ -269,7 +310,8 @@
                     End: $('#chkIsFullDay').is(':checked') ? null : $('#txtEnd').val().trim(),
                     Description: $('#txtDescription').val(),
                     IsFullDay: $('#chkIsFullDay').is(':checked'),
-                    Tentative: $('#chkTentative').is(':checked')
+                    Tentative: $('#chkTentative').is(':checked'),
+                    SplitDates: $('#splitDates').val()
                 }
                 SaveEvent(data);
                 // call function for submit data to the server
