--- a/MyCalendar.MVC/Views/Home/Index.cshtml
+++ b/MyCalendar.MVC/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using MyCalendar.Website.ViewModels 
 @using MyCalendar.Helpers
-@using MyCalendar.Enum
+@using MyCalendar.Enums
 
 @{
     ViewBag.Title = "Authenticate";
