--- a/MyCalendar.MVC/Views/Home/Settings.cshtml
+++ b/MyCalendar.MVC/Views/Home/Settings.cshtml
@@ -27,7 +27,7 @@
     </div>
 }
 
-@Html.Partial("_Tags", Model.UserTags);
+@Html.Partial("_Tags", Model.UserTags)
 
 @section Scripts{
     <script type="text/javascript">
