--- a/MyCalendar.MVC/Views/Home/_Status.cshtml
+++ b/MyCalendar.MVC/Views/Home/_Status.cshtml
@@ -1,5 +1,5 @@
 ﻿@model MyCalendar.Website.ViewModels.CalendarVM
-@using MyCalendar.Enum
+@using MyCalendar.Enums
 
 @if (Model.UpdateStatus.UpdateResponse != null)
 {
