--- a/MyCalendar.MVC/Views/Shared/_Layout.cshtml
+++ b/MyCalendar.MVC/Views/Shared/_Layout.cshtml
@@ -46,8 +46,8 @@
                             </a>
                         </li>
                         <li>
-                            <a style="@(Model.MenuItem.Overview ? "color:#0094ff": "")" href="@Url.Action("Index", "Home")">
-                                <span class="glyphicon glyphicon-check"></span> Overview
+                            <a style="@(Model.MenuItem.Overview ? "color:#0094ff": "")" href="@Url.Action("Overview", "Home")">
+                                <span class="glyphicon glyphicon-stats"></span> Overview
                             </a>
                         </li>
                         <li>
@@ -84,7 +84,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <small>&copy; @DateTime.Now.Year - iCalendar App® <span class="pull-right">v1.1.8</span></small>
+            <small>&copy; @DateTime.Now.Year - iCalendar App® <span class="pull-right">v1.1.9</span></small>
         </footer>
     </div>
 
